create users and auth with jwt
