# src/main/java/com/opchaves/kommonei/TokenSecuredResource.java
@@ -1,0 +1,55 @@
+package com.opchaves.kommonei;
+
+import org.eclipse.microprofile.jwt.JsonWebToken;
+
+import jakarta.annotation.security.PermitAll;
+import jakarta.annotation.security.RolesAllowed;
+import jakarta.inject.Inject;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.InternalServerErrorException;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.SecurityContext;
+
+@Path("/api/secured")
+public class TokenSecuredResource {
+  @Inject
+  JsonWebToken jwt;
+
+  @GET
+  @PermitAll
+  @Produces(MediaType.TEXT_PLAIN)
+  public String hello(@Context SecurityContext ctx) {
+    return getResponseString(ctx);
+  }
+
+  @GET
+  @Path("allowed")
+  @RolesAllowed({ "User", "Admin" })
+  @Produces(MediaType.TEXT_PLAIN)
+  public String helloRolesAllowed(@Context SecurityContext ctx) {
+    return getResponseString(ctx) + ", birthdate: " + jwt.getClaim("birthdate").toString();
+  }
+
+  private String getResponseString(SecurityContext ctx) {
+    String name;
+    if (ctx.getUserPrincipal() == null) {
+      name = "anonymous";
+    } else if (!ctx.getUserPrincipal().getName().equals(jwt.getName())) {
+      throw new InternalServerErrorException("Principal and JsonWebToken names do not match");
+    } else {
+      name = ctx.getUserPrincipal().getName();
+    }
+    return String.format("hello + %s,"
+        + " isHttps: %s,"
+        + " authScheme: %s,"
+        + " hasJWT: %s",
+        name, ctx.isSecure(), ctx.getAuthenticationScheme(), hasJwt());
+  }
+
+  private boolean hasJwt() {
+    return jwt.getClaimNames() != null;
+  }
+}
